email input styling

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 announcements and our launch deals.
               </p>
               <form>
-                <div>
+                <div class="form-container">
                   <input
                     type="email"
                     name="email"
