Mobile first design done

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <body>
     <main>
       <div class="container">
-        <header class="content">
+        <header class="intro">
           <!-- Logo -->
-          <nav>
+          <nav class="navbar">
             <a href="index.html" class="logo"
               ><img src="images/logo.svg" alt="logo"
             /></a>
