--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
             </div>
           </div>
         </header>
-        <div class="intro-img"></div>
+        <div class="intro__img">
+          <img
+            src="images/hero-desktop.jpg"
+            alt="Woman Picture for Header Section"
+            srcset=""
+          />
+        </div>
       </div>
     </main>
     <footer>
